
  - In order to support newer versions of Java,
    ConfigAssertions now uses ByteBuddy instead of cglib.
    INCOMPATIBLE CHANGE: ConfigAssertions.assertRecordedDefaults()
    can no longer test config classes that are package private or have
    package private configuration attributes. The configuration classes
    and their configuration getters and setters must be made public.

* Library Upgrades

  - ByteBuddy to 1.15.11 (was 1.12.9)
  - Mockito to 5.15.2 (was 4.5.1)
  - Objenesis to 3.3 (was 3.2)

* Maven plugin upgrades

  - JaCoCo to 0.8.12 (was 0.8.8)

Platform 3.24

* Library Upgrades

  - Base Docker image to c15-java17:3.65 (was 3.57) (CVE-2025-21502)

* Maven plugin upgrades

  - maven-shade-plugin to 3.6.0 (was 3.2.2)
  - spotbugs-maven-plugin to 4.8.6.6 (was 4.7.0.0)

Platform 3.26

* HTTP Server

  We now accept IPv6 addresses in the `http-server.internal-networks` configuration setting,
  We now parse IPv6 addresses in X-Forwarded-For: headers.

* Library Upgrades

  - Base Docker image to c15-java17:3.57 (was 3.47)
    (CVE-2024-45490 CVE-2024-45491 CVE-2024-45492 CVE-2024-21208 CVE-2024-21210 CVE-2024-21217 CVE-2024-21235)
  - Jetty to 11.0.24 (was 11.0.20)
  - logback to 1.5.13 (was 1.5.0)

Platform 3.23

* Library Upgrades

  - Base Docker image to c15-java17:3.47 (was 3.46)

Platform 3.22

* RPM packaging

  We removed the legacy init script from RPM packages. Systemd is now required.

Platform 3.21

* Library Upgrades

  - Base Docker image to c15-java17:3.46 (was 3.45)

Platform 3.20

* Jaxrs

  - When HSTS headers are enabled (by configuring "jaxrs.hsts.max-age"), we now attach the
    Strict-Transport-Security header to responses from admin endpoints as well.

Platform 3.17

* Library Upgrades

  - Jetty to 11.0.20 (was 11.0.17) (CVE-2024-22201)

Platform 3.16

* Library Upgrades

  - error_prone_annotations to 2.25.0 (was 2.18.0)

Platform 3.14

* Library Upgrades

  - jackson to 2.16.1 (was 2.15.2)
  - logback to 1.5.0 (was 1.4.12)
