@@ -1,3 +1,1 @@
 node.environment=test
-testing.discovery.static=true
-service-balancer.reporting.uri=https://pulse-int-ingest.lab.ppops.net
