@@ -81,11 +81,6 @@
 
         <dependency>
             <groupId>com.proofpoint.platform</groupId>
-            <artifactId>discovery</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.proofpoint.platform</groupId>
             <artifactId>log</artifactId>
         </dependency>
 
@@ -116,7 +111,7 @@
 
         <dependency>
             <groupId>com.proofpoint.platform</groupId>
-            <artifactId>reporting-client</artifactId>
+            <artifactId>reporting-prometheus</artifactId>
         </dependency>
 
         <dependency>
