@@ -17,8 +17,6 @@ package com.proofpoint.platform.sample;
 
 import com.google.inject.Injector;
 import com.proofpoint.audit.AuditLogModule;
-import com.proofpoint.discovery.client.DiscoveryModule;
-import com.proofpoint.discovery.client.announce.Announcer;
 import com.proofpoint.http.server.HttpServerModule;
 import com.proofpoint.jaxrs.JaxrsModule;
 import com.proofpoint.jmx.JmxHttpModule;
@@ -27,8 +25,8 @@ import com.proofpoint.json.JsonModule;
 import com.proofpoint.log.LogJmxModule;
 import com.proofpoint.log.Logger;
 import com.proofpoint.node.NodeModule;
-import com.proofpoint.reporting.ReportingClientModule;
 import com.proofpoint.reporting.ReportingModule;
+import com.proofpoint.reporting.ReportingPrometheusModule;
 import org.weakref.jmx.guice.MBeanModule;
 
 import static com.proofpoint.bootstrap.Bootstrap.bootstrapApplication;
@@ -47,7 +45,6 @@ public final class Main
             Injector injector = bootstrapApplication("sample-server")
                     .withModules(
                             new NodeModule(),
-                            new DiscoveryModule(),
                             new HttpServerModule(),
                             new JsonModule(),
                             new JaxrsModule(),
@@ -57,12 +54,10 @@ public final class Main
                             new LogJmxModule(),
                             new AuditLogModule(),
                             new ReportingModule(),
-                            new ReportingClientModule(),
+                            new ReportingPrometheusModule(),
                             new MainModule()
                     )
                     .initialize();
-
-            injector.getInstance(Announcer.class).start();
         }
         catch (Throwable e) {
             log.error(e);
