@@ -51,11 +51,6 @@
 
         <dependency>
             <groupId>com.proofpoint.platform</groupId>
-            <artifactId>discovery</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.proofpoint.platform</groupId>
             <artifactId>log</artifactId>
         </dependency>
 
@@ -86,7 +81,7 @@
 
         <dependency>
             <groupId>com.proofpoint.platform</groupId>
-            <artifactId>reporting-client</artifactId>
+            <artifactId>reporting-prometheus</artifactId>
         </dependency>
 
         <dependency>
